# packlayer

./: .pre-commit-config.yaml  404.html  README.md  index.html  migrate-docs.py  mkdocs.yml  objects.inv  project_dump.txt  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/client/: index.html
api/exceptions/: index.html
api/models/: index.html
docs/: index.md
docs/api/: client.md  exceptions.md  models.md
packlayer/: __init__.py  __main__.py  _version.py  client.py  config.py  types.py
packlayer/cli/: cli.py  logging.py  theme.py
packlayer/domain/: __init__.py  config.py  exceptions.py  models.py
packlayer/infrastructure/: downloader.py  http.py  installer.py
packlayer/interfaces/: __init__.py  downloader.py  http.py  resolver.py
packlayer/providers/: __init__.py  registry.py
packlayer/providers/ftb/: parser.py  resolver.py  slug.py
packlayer/providers/modrinth/: parser.py  resolver.py  slug.py
search/: search_index.json
tests/: test_packlayer.py
