[project]
name = "packlayer"
version = "0.1.0"
description = "Async minecraft modpack resolver and downloader"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]

[project.scripts]
packlayer = "packlayer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["packlayer/py.typed"]
packages = ["packlayer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"